# MiRco_robot

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  readme_backup.md  search.html
Docker_imgs/Volume/: Dockerfile
connection/: index.html
control/: index.html
control_ros/: index.html
control_web/: index.html
convenience_scripts/: README.md  container_prompt.sh  volume_ros_docker.sh
docker/: index.html
docs/: connection.md  control.md  docker.md  index.md  installation.md
installation/: index.html
mia_description/: CMakeLists.txt  package.xml
mia_description/launch/: load_mia.launch  view_mia.launch
mia_description/urdf/: mia.urdf.xacro  mia_macro.xacro  tmp.urdf
mir_analysis/: CMakeLists.txt  package.xml
mir_analysis/scripts/: lasers.py  odom.py  rob_dist.py
mir_control/: CMakeLists.txt  package.xml  setup.py
mir_control/config/: markers.yaml  target_goals copy.yaml  target_goals.yaml
mir_control/launch/: mir_control.launch  mir_control_node.launch  mir_driver.launch
mir_control/msg/: Marker.msg
mir_control/scripts/: mir_control_node.py
mir_control/src/mir_control/: goal_teacher.py  mir100_class.py  mobile_pose_teacher.py
mir_control/srv/: ChangeOffsets.srv  DockToMarker.srv  GetGoal.srv  GetGoalNames.srv  GetMarkers.srv  GoToGoal.srv  SaveGoal.srv
mir_joy_teleop/: CMakeLists.txt  package.xml
mir_joy_teleop/launch/: joy_teleop.launch  test.launch
mir_joy_teleop/scripts/: joy_teleop.py  joy_teleop2.py  joy_teleop_external.py  joy_teleop_internal.py
mir_rest_api/: CMakeLists.txt  package.xml  setup.py
mir_rest_api/scripts/: api_ros_server.py
mir_rest_api/src/mir_rest_api/: api.py
mir_rest_api/srv/: Rest.srv
mir_ur5e/: CMakeLists.txt  package.xml  setup.py
mir_ur5e/config/: target_goal.yaml  ur5e_calibration.yaml  ur5e_saved_poses.yaml
mir_ur5e/launch/: mir_driver.launch  pick_and_place.launch  robolab_ur5e_mir.launch  ur5e_2f85_bringup.launch  ur_common.launch  ur_control.launch
mir_ur5e/scripts/: pick_and_place.py  pose_pub.py  testt.py
mirco_description/: CMakeLists.txt  package.xml
mirco_description/launch/: load_mirco.launch  view_mirco.launch
mirco_description/urdf/: mirco.urdf.xacro  mirco_macro.xacro
mirco_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mirco_moveit_config/config/: gazebo_mirco_robot.urdf  joint_limits.yaml  mirco_robot.srdf.xacro  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
mirco_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
mirco_robot/: CMakeLists.txt  package.xml
mirco_robot/cfg/: mirco.rviz  mirco_moveit.rviz
mirco_robot/config/: arm_gripper_joint_sources.yaml  arm_gripper_joint_sources.yml  robot_joint_sources.yaml  robot_joint_sources.yml  ur5e_saved_poses.yml
mirco_robot/launch/: conveyor.launch  delivery.launch  mirco_bringup.launch  mirco_control.launch  ur_control.launch  view_mirco.launch
mirco_robot/scripts/: conveyor.py  delivery.py
moca_description/: CMakeLists.txt  package.xml
moca_description/cfg/: rviz.rviz
moca_description/launch/: load_moca.launch  view_mia.launch  view_moca.launch
moca_description/urdf/: moca.urdf.xacro  moca_macro.xacro
moca_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moca_moveit_config/cfg/: rviz_moveit.rviz  rviz_moveit_TODO.rviz
moca_moveit_config/config/: fake_controllers.yaml  gazebo_moca_robot.urdf  joint_limits.yaml  moca_robot.srdf  moca_robot.srdf.xacro  simple_moveit_controllers.yaml
moca_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moca_robot/: CMakeLists.txt  package.xml
moca_robot/cfg/: moca.rviz  moca_moveit.rviz  moca_rviz.rviz
moca_robot/config/: joint_state_publisher_sources.yml  ur5e_saved_poses.yml
moca_robot/launch/: delivery.launch  moca_bringup.launch  moca_control.launch  pick_and_place.launch  ur_control.launch  view_moca.launch
moca_robot/scripts/: delivery.py  pick_and_place.py
reference/: index.html
search/: search_index.json
ur5e_2f85/: CMakeLists.txt  package.xml  setup.py
ur5e_2f85/config/: ur5e_saved_poses.yaml  ur5e_saved_poses.yml
ur5e_2f85/launch/: pick_and_place.launch  ur5e_2f85_bringup.launch  ur5e_2f85_control_node.launch  ur_common.launch  ur_control.launch  view_ur5e_2f85.launch
ur5e_2f85/scripts/: pick_and_place.py  ur5e_2f85_control_node.py
ur5e_2f85/src/ur5e_2f85/: pose_teacher.py  robotiq_2f85_class.py  ur5e_class.py
ur5e_2f85/srv/: GetPose.srv  GetPoseNames.srv  SetPose.srv
ur5e_2f85_description/: CMakeLists.txt  package.xml
ur5e_2f85_description/cfg/: rviz.rviz
ur5e_2f85_description/config/: ur5e_controllers.yaml
ur5e_2f85_description/launch/: load_ur5e_2f85.launch  view_ur5e_2f85.launch
ur5e_2f85_description/urdf/: ur5e_2f85.urdf.xacro  ur5e_2f85.xacro  ur5e_2f85_macro.xacro  ur5e_macro.xacro
ur5e_2f85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_2f85_moveit_config/cfg/: rviz_moveit.rviz  rviz_moveit_demo.rviz
ur5e_2f85_moveit_config/config/: fake_controllers.yaml  gazebo_ur5e_2f85_robot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  (+2 more)
(+22 files in other folders)
