<?xml version="1.0"?>
<package format="2">
  <name>mirco_description</name>
  <version>0.0.1</version>
  <description>MiRco mobile manipulator description package</description>

  <maintainer email="jj0605@student.uni-lj.si">Jan Jerićević</maintainer>
  <author email="jj0605@student.uni-lj.si">Jan Jerićević</author>

  <license>BSD</license>

  <url type="repository">https://github.com/JanJericevic/MiRco_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>mir_description</exec_depend>
  <exec_depend>ur5e_2f85_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
</package>
