<?xml version="1.0"?>
<package format="2">
  <name>mirco_robot</name>
  <version>0.0.1</version>
  <description>Control for MiRco mobile manipulator</description>

  <maintainer email="jj0605@student.uni-lj.si">Jan Jerićević</maintainer>
  <author email="jj0605@student.uni-lj.si">Jan Jerićević</author>

  <license>BSD</license>

  <url type="repository">https://github.com/JanJericevic/MiRco_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mir_control</build_depend>
  <build_depend>mir_rest_api</build_depend>
  <build_depend>ur5e_2f85</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>mir_control</exec_depend>
  <exec_depend>mir_rest_api</exec_depend>
  <exec_depend>ur5e_2f85</exec_depend>

</package>
