<?xml version="1.0"?>
<package format="2">
  <name>ur5e_2f85</name>
  <version>0.0.1</version>
  <description>Robot control package for UR5e robot manipulator with Robotiq 2F-85 gripper</description>

  <maintainer email="jj0605@student.uni-lj.si">Jan Jerićević</maintainer>
  <author email="jj0605@student.uni-lj.si">Jan Jerićević</author>

  <license>BSD</license>

  <url type="repository">https://github.com/JanJericevic/MiRco_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>robotiq_2f_gripper_control</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>robotiq_2f_gripper_control</exec_depend>

</package>
