<?xml version="1.0"?>
<package format="2">
  <name>ur5e_2f85_description</name>
  <version>0.0.1</version>
  <description>Robot description package for UR5e robot manipulator with Robotiq 2F-85 gripper</description>

  <maintainer email="jj0605@student.uni-lj.si">Jan Jerićević</maintainer>
  <author email="jj0605@student.uni-lj.si">Jan Jerićević</author>

  <license>BSD</license>

  <url type="repository">https://github.com/JanJericevic/MiRco_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
